// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Container should render Default 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: sticky;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
  background-color: #fff;
}

.emotion-2 {
  background-color: transparent;
  color: inherit;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: none;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  box-sizing: border-box;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: static;
}

.emotion-4 {
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  min-height: unset;
  grid-template-columns: max-content max-content 1fr;
  grid-auto-flow: column;
  justify-items: center;
  padding: 0;
}

@media (min-width:600px) {
  .emotion-4 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:0px) {
  @media (orientation: landscape) {
    .emotion-4 {
      min-height: 48px;
    }
  }
}

@media (min-width:600px) {
  .emotion-4 {
    min-height: 64px;
  }
}

@media (min-width:600px) {
  .emotion-4 {
    grid-template-columns: 1fr max-content 1fr;
    min-height: unset;
    padding: 0;
  }
}

@media (min-width:900px) {
  .emotion-4 {
    min-height: unset;
    padding: 0;
  }
}

.emotion-5 {
  display: grid;
  grid-template-columns: max-content 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-self: start;
  gap: 16px;
}

.emotion-7 {
  background-color: #e91e63;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 52px;
  height: 52px;
  color: #fff;
}

@media (min-width:900px) {
  .emotion-7 {
    width: 60px;
    height: 60px;
  }

  .emotion-7 svg {
    font-size: 36px;
  }
}

@media (min-width:1333px) {
  .emotion-7 {
    width: 100px;
    height: 100px;
  }

  .emotion-7 svg {
    font-size: 52px;
  }
}

.emotion-9 {
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 50%;
  padding: 12px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: white;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.75rem;
  overflow: visible;
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-9::-moz-focus-inner {
  border-style: none;
}

.emotion-9.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-9 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-9:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-9:hover {
    background-color: transparent;
  }
}

.emotion-9.Mui-disabled {
  background-color: transparent;
  color: rgba(0, 0, 0, 0.26);
}

.emotion-10 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-11 {
  display: none;
  gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

@media (min-width: 740px) {
  .emotion-11 {
    display: flex;
  }
}

.emotion-13 {
  margin: 0;
  font: inherit;
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: rgba(233, 30, 99, 0.4);
  font-size: 1rem;
}

.emotion-13:hover {
  text-decoration-color: inherit;
}

@media (min-width:900px) {
  .emotion-13 {
    font-size: 1.3rem;
  }
}

.emotion-16 {
  margin: 0;
  font: inherit;
  color: unset;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(233, 30, 99, 0.4);
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  justify-self: center;
}

.emotion-16:hover {
  text-decoration-color: inherit;
}

.emotion-17 {
  fill: currentColor;
  width: auto;
}

.emotion-19 {
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-self: end;
  gap: 8px;
  padding-right: 8px;
}

@media (min-width:900px) {
  .emotion-19 {
    gap: 16px;
  }
}

@media (min-width:1333px) {
  .emotion-19 {
    padding-right: 0;
  }
}

.emotion-21 {
  margin: 0;
  font: inherit;
  color: #e91e63;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(233, 30, 99, 0.4);
}

.emotion-21:hover {
  text-decoration-color: inherit;
}

.emotion-22 {
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 50%;
  padding: 8px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: black;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 2em;
  overflow: visible;
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-22::-moz-focus-inner {
  border-style: none;
}

.emotion-22.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-22 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-22:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-22:hover {
    background-color: transparent;
  }
}

.emotion-22.Mui-disabled {
  background-color: transparent;
  color: rgba(0, 0, 0, 0.26);
}

<nav
    class="emotion-0 emotion-1"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic emotion-2"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular emotion-3 emotion-4"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge emotion-9"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-10"
              />
            </button>
          </div>
          <div
            class="emotion-11 emotion-12"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-13"
              href="/"
            >
              Home
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-13"
              href="/a/abcd"
            >
              Artikel
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-13"
              href="https://google.com"
            >
              Google
            </a>
          </div>
        </div>
        <a
          aria-label="Startseite"
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-16"
          href="/"
        >
          <div
            class="emotion-17 emotion-18"
          />
        </a>
        <div
          class="emotion-19 emotion-20"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-21"
            href="/login"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium login-button emotion-22"
              tabindex="0"
              type="button"
            >
              <svg
                aria-label="Login"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88a9.947 9.947 0 0 1 12.28 0C16.43 19.18 14.03 20 12 20z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-10"
              />
            </button>
          </a>
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;

exports[`Navbar Container should render WithClassName 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: sticky;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
  background-color: #fff;
}

.emotion-2 {
  background-color: transparent;
  color: inherit;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: none;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  box-sizing: border-box;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: static;
}

.emotion-4 {
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  min-height: unset;
  grid-template-columns: max-content max-content 1fr;
  grid-auto-flow: column;
  justify-items: center;
  padding: 0;
}

@media (min-width:600px) {
  .emotion-4 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:0px) {
  @media (orientation: landscape) {
    .emotion-4 {
      min-height: 48px;
    }
  }
}

@media (min-width:600px) {
  .emotion-4 {
    min-height: 64px;
  }
}

@media (min-width:600px) {
  .emotion-4 {
    grid-template-columns: 1fr max-content 1fr;
    min-height: unset;
    padding: 0;
  }
}

@media (min-width:900px) {
  .emotion-4 {
    min-height: unset;
    padding: 0;
  }
}

.emotion-5 {
  display: grid;
  grid-template-columns: max-content 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-self: start;
  gap: 16px;
}

.emotion-7 {
  background-color: #e91e63;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 52px;
  height: 52px;
  color: #fff;
}

@media (min-width:900px) {
  .emotion-7 {
    width: 60px;
    height: 60px;
  }

  .emotion-7 svg {
    font-size: 36px;
  }
}

@media (min-width:1333px) {
  .emotion-7 {
    width: 100px;
    height: 100px;
  }

  .emotion-7 svg {
    font-size: 52px;
  }
}

.emotion-9 {
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 50%;
  padding: 12px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: white;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.75rem;
  overflow: visible;
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-9::-moz-focus-inner {
  border-style: none;
}

.emotion-9.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-9 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-9:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-9:hover {
    background-color: transparent;
  }
}

.emotion-9.Mui-disabled {
  background-color: transparent;
  color: rgba(0, 0, 0, 0.26);
}

.emotion-10 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-11 {
  display: none;
  gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

@media (min-width: 740px) {
  .emotion-11 {
    display: flex;
  }
}

.emotion-13 {
  margin: 0;
  font: inherit;
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: rgba(233, 30, 99, 0.4);
  font-size: 1rem;
}

.emotion-13:hover {
  text-decoration-color: inherit;
}

@media (min-width:900px) {
  .emotion-13 {
    font-size: 1.3rem;
  }
}

.emotion-16 {
  margin: 0;
  font: inherit;
  color: unset;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(233, 30, 99, 0.4);
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  justify-self: center;
}

.emotion-16:hover {
  text-decoration-color: inherit;
}

.emotion-17 {
  fill: currentColor;
  width: auto;
}

.emotion-19 {
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-self: end;
  gap: 8px;
  padding-right: 8px;
}

@media (min-width:900px) {
  .emotion-19 {
    gap: 16px;
  }
}

@media (min-width:1333px) {
  .emotion-19 {
    padding-right: 0;
  }
}

.emotion-21 {
  margin: 0;
  font: inherit;
  color: #e91e63;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(233, 30, 99, 0.4);
}

.emotion-21:hover {
  text-decoration-color: inherit;
}

.emotion-22 {
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 50%;
  padding: 8px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: black;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 2em;
  overflow: visible;
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-22::-moz-focus-inner {
  border-style: none;
}

.emotion-22.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-22 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-22:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-22:hover {
    background-color: transparent;
  }
}

.emotion-22.Mui-disabled {
  background-color: transparent;
  color: rgba(0, 0, 0, 0.26);
}

<nav
    class="extra-classname emotion-0 emotion-1"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic emotion-2"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular emotion-3 emotion-4"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge emotion-9"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-10"
              />
            </button>
          </div>
          <div
            class="emotion-11 emotion-12"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-13"
              href="/"
            >
              Home
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-13"
              href="/a/abcd"
            >
              Artikel
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-13"
              href="https://google.com"
            >
              Google
            </a>
          </div>
        </div>
        <a
          aria-label="Startseite"
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-16"
          href="/"
        >
          <div
            class="emotion-17 emotion-18"
          />
        </a>
        <div
          class="emotion-19 emotion-20"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-21"
            href="/login"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium login-button emotion-22"
              tabindex="0"
              type="button"
            >
              <svg
                aria-label="Login"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88a9.947 9.947 0 0 1 12.28 0C16.43 19.18 14.03 20 12 20z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-10"
              />
            </button>
          </a>
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;

exports[`Navbar Container should render WithEmotion 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: sticky;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
  background-color: #fff;
}

.emotion-2 {
  background-color: transparent;
  color: inherit;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: none;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  box-sizing: border-box;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: static;
}

.emotion-4 {
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
  min-height: unset;
  grid-template-columns: max-content max-content 1fr;
  grid-auto-flow: column;
  justify-items: center;
  padding: 0;
}

@media (min-width:600px) {
  .emotion-4 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:0px) {
  @media (orientation: landscape) {
    .emotion-4 {
      min-height: 48px;
    }
  }
}

@media (min-width:600px) {
  .emotion-4 {
    min-height: 64px;
  }
}

@media (min-width:600px) {
  .emotion-4 {
    grid-template-columns: 1fr max-content 1fr;
    min-height: unset;
    padding: 0;
  }
}

@media (min-width:900px) {
  .emotion-4 {
    min-height: unset;
    padding: 0;
  }
}

.emotion-5 {
  display: grid;
  grid-template-columns: max-content 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-self: start;
  gap: 16px;
}

.emotion-7 {
  background-color: #e91e63;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 52px;
  height: 52px;
  color: #fff;
}

@media (min-width:900px) {
  .emotion-7 {
    width: 60px;
    height: 60px;
  }

  .emotion-7 svg {
    font-size: 36px;
  }
}

@media (min-width:1333px) {
  .emotion-7 {
    width: 100px;
    height: 100px;
  }

  .emotion-7 svg {
    font-size: 52px;
  }
}

.emotion-9 {
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 50%;
  padding: 12px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: white;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.75rem;
  overflow: visible;
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-9::-moz-focus-inner {
  border-style: none;
}

.emotion-9.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-9 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-9:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-9:hover {
    background-color: transparent;
  }
}

.emotion-9.Mui-disabled {
  background-color: transparent;
  color: rgba(0, 0, 0, 0.26);
}

.emotion-10 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-11 {
  display: none;
  gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

@media (min-width: 740px) {
  .emotion-11 {
    display: flex;
  }
}

.emotion-13 {
  margin: 0;
  font: inherit;
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: rgba(233, 30, 99, 0.4);
  font-size: 1rem;
}

.emotion-13:hover {
  text-decoration-color: inherit;
}

@media (min-width:900px) {
  .emotion-13 {
    font-size: 1.3rem;
  }
}

.emotion-16 {
  margin: 0;
  font: inherit;
  color: unset;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(233, 30, 99, 0.4);
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  justify-self: center;
}

.emotion-16:hover {
  text-decoration-color: inherit;
}

.emotion-17 {
  fill: currentColor;
  width: auto;
}

.emotion-19 {
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-self: end;
  gap: 8px;
  padding-right: 8px;
}

@media (min-width:900px) {
  .emotion-19 {
    gap: 16px;
  }
}

@media (min-width:1333px) {
  .emotion-19 {
    padding-right: 0;
  }
}

.emotion-21 {
  margin: 0;
  font: inherit;
  color: #e91e63;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(233, 30, 99, 0.4);
}

.emotion-21:hover {
  text-decoration-color: inherit;
}

.emotion-22 {
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 50%;
  padding: 8px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: black;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 2em;
  overflow: visible;
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-22::-moz-focus-inner {
  border-style: none;
}

.emotion-22.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-22 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-22:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-22:hover {
    background-color: transparent;
  }
}

.emotion-22.Mui-disabled {
  background-color: transparent;
  color: rgba(0, 0, 0, 0.26);
}

<nav
    class="emotion-0 emotion-1"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic emotion-2"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular emotion-3 emotion-4"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <button
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge emotion-9"
              tabindex="0"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-10"
              />
            </button>
          </div>
          <div
            class="emotion-11 emotion-12"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-13"
              href="/"
            >
              Home
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-13"
              href="/a/abcd"
            >
              Artikel
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-13"
              href="https://google.com"
            >
              Google
            </a>
          </div>
        </div>
        <a
          aria-label="Startseite"
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-16"
          href="/"
        >
          <div
            class="emotion-17 emotion-18"
          />
        </a>
        <div
          class="emotion-19 emotion-20"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-21"
            href="/login"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium login-button emotion-22"
              tabindex="0"
              type="button"
            >
              <svg
                aria-label="Login"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88a9.947 9.947 0 0 1 12.28 0C16.43 19.18 14.03 20 12 20z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-10"
              />
            </button>
          </a>
        </div>
      </div>
    </header>
  </nav>
</DocumentFragment>
`;
